尝试修复鸡尾酒中可能导致空指针异常的bug